# DiscordBot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config-default.yml  discord_bot.py  pyproject.toml  requirements.txt  run.py  task-definition.json  tox.ini
.github/: pull_request-template.md
.github/workflows/: aws.yml
aws/: DiscordBotTask.json
blish/: __init__.py  __main__.py  blish.py  constants.py  error_handler.py  user.py
blish/commands/: test.py
blish/handlers/: error_handler.py
blish/interceptors/: message_validation_interceptor.py
blish/modules/: open_ai_test.py  test.py
blish/modules/anilist/: anilist.py  api_queries.py  constants.py  response_builders.py
blish/modules/openai/: open_ai_test.py
blish/modules/sample/: player.py  sample.py
blish/utils/: extensions.py  helpers.py
